--- a/assets/css/cartoes.css
+++ b/assets/css/cartoes.css
@@ -25,15 +25,15 @@
 
 .card {
   border-radius: 15px;
-  background-color: rgba(241, 245, 249, 0.7);
+  background-color: rgba(240, 243, 249, 0.7);
   /* margin-top: -10px; */
   padding-top: 200px;
   float: left;
-  box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.1);
   transition: 0.5s;
   display: flex;
   align-items: center;
-  border: 1px solid #ccc;
+  border: 1px solid var(--fundo);
   padding: 10px;
   width: 400px;
   margin-bottom: 20px;
