--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 @import url("./hero.css");
 @import url("./cartoes.css");
 @import url("./sobre.css");
+@import url("./projetos.css");
 @import url("./footer.css");
 
 :root {
@@ -12,7 +13,7 @@
 
 body {
   height: 100vh;
-  background: #F0F3F9;
+  background: var(--fundo);
 }
 
 span.subtitleh {
