--- a/assets/css/cartoes.css
+++ b/assets/css/cartoes.css
@@ -1,9 +1,6 @@
-.hero2 {
-  height: 800px;
-  background: #ffffff;
-}
 
-.hero2 .container h1 {
+
+.cartoes main h1 {
   padding-top: 40px;
   margin-top: 100px;
   text-align: center;
@@ -13,6 +10,7 @@
   font-weight: 700;
 
 }
+
 
 /* font-family: "Saira"; */
 /* font-family: "Poppinis"; */
@@ -25,7 +23,7 @@
 
 .card {
   border-radius: 15px;
-  background-color: rgba(240, 243, 249, 0.7);
+  background-color: rgba(216, 227, 250, 0.7);
   /* margin-top: -10px; */
   padding-top: 200px;
   float: left;
