--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,3 +1,13 @@
+.hero2 main h1 {
+  padding-top: 40px;
+  margin-top: 100px;
+  text-align: center;
+  color: #222;
+  font-family: "Saira";
+  font-size: 48px;
+  font-weight: 700;
+
+}
 .hero {
   /* background: greenyellow; */
   display: grid;
