--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
 /* Estou chamando os estilos de header */
-@import url("./header.css");
-@import url("./base.css");
-@import url("./hero.css");
-@import url("./cartoes.css");
-@import url("./sobre.css");
-@import url("./projetos.css");
-@import url("./footer.css");
-@import url("./mais-procurados.css");
+@import url("./base/base.css");
+@import url("./base/footer.css");
+@import url("./home/cartoes.css");
+@import url("./home/header.css");
+@import url("./home/hero.css");
+@import url("./home/mais-procurados.css");
+@import url("./home/projetos.css");
+@import url("./home/sobre.css");
 
 :root {
   --fundo: #F0F3F9;
