mobile adaptation header, hero and cards

--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -14,7 +14,14 @@
 
 /* MOBILE */
 @media (max-width: 800px) {
-  #hero{
-    display: none;
-  }
-}
+  .container{
+     max-width: 800px;
+   }
+ }
+ 
+ @media (max-width: 800px) {
+  .col-100{
+    max-width: 100%;
+   }
+ }
+ 
