--- a/assets/css/home/cartoes.css
+++ b/assets/css/home/cartoes.css
@@ -1,6 +1,7 @@
 
+
 #mais-procurados h1{
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 700;
 }
 
@@ -14,13 +15,7 @@
   max-width: 100px;
 }
 
-/* MOBILE */
-@media (max-width: 800px) {
-  .mais-procurados-cards {
-    grid-template-columns: 1fr;
-    gap: 40px;
-  }
-}
+
 
 .mais-procurados-cards  h1 {
   padding-top: 40px;
@@ -32,7 +27,6 @@
   font-weight: 700;
 
 }
-
 
 /* font-family: "Saira"; */
 /* font-family: "Poppinis"; */
@@ -80,4 +74,24 @@
   margin: 5px 0;
   font-family: "Poppinis";
   font-weight: 400;
+}
+/* MOBILE */
+@media (max-width: 800px) {
+  .mais-procurados-cards {
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+}
+@media (max-width: 800px) {
+  .mais-procurados-cards {
+    display: inline-block;
+
+  }
+}
+@media (max-width: 800px) {
+  .mais-procurados-cards{
+    margin-left: -70px;
+
+
+  }
 }
