--- a/assets/css/home/hero.css
+++ b/assets/css/home/hero.css
@@ -1,15 +1,6 @@
-.hero2 main h1 {
-  padding-top: 40px;
-  margin-top: 100px;
-  text-align: center;
-  color: #222;
-  font-family: "Saira";
-  font-size: 48px;
-  font-weight: 700;
 
-}
 .hero  {
-  background: greenyellow;
+  /* background: greenyellow; */
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
@@ -17,7 +8,7 @@
 }
 
 .hero-img {
-   background-color: tomato; 
+   /* background-color: tomato;  */
 }
 
 .hero-img img {
@@ -55,3 +46,9 @@
 
 /* font-family: "Poppinis"; */
 /* font-family: "Saira"; */
+@media (max-width: 800px) {
+ .hero{
+    max-width: 600px;
+  }
+}
+
