--- a/assets/css/base/footer.css
+++ b/assets/css/base/footer.css
@@ -76,3 +76,15 @@
   text-decoration: underline;
 }
 
+@media (max-width: 800px) {
+  .footer-distributed .footer-left, .footer-distributed .footer-right {
+    text-align: center;
+  }
+  .footer-distributed .footer-right {
+    float: none;
+    margin: 0 auto 20px;
+  }
+  .footer-distributed .footer-left p.footer-links {
+    height: 100px;
+  }
+}
