--- a/assets/css/home/sobre.css
+++ b/assets/css/home/sobre.css
@@ -23,10 +23,13 @@
     font-family: "Poppinis";
     font-weight: 400;
 }
-/* @media (min-width: 360px){
-    .sobre .card{
-    max-width: 480px;
-    margin: 0 auto;
-    padding: 0px 20px;
-    }
-  } */
+
+   @media (max-width: 800px) {
+   .sobre .card {
+    margin-left: 0;
+/* justify-content: center; */
+   /* align-items: center; */
+   width: 60vh;
+    height: 30vh;
+}
+   }
