--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -4,10 +4,10 @@
   max-width: 1240px;
   margin: 0 auto;
   padding: 0px 20px;
-  border: 1px solid red; 
+  /* border: 1px solid red;  */
 }
 .col-100{
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   background-color:rgb(255, 255, 255);
   width: 100%;
 }
