--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -11,6 +11,15 @@
   background-color:rgb(255, 255, 255);
   width: 100%;
 }
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
+}
 
 /* MOBILE */
 @media (max-width: 800px) {
