alteração de style no sobre para mobile

--- a/assets/css/home/projetos.css
+++ b/assets/css/home/projetos.css
@@ -6,7 +6,7 @@
 
 .separacao {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
 }
 
 .projetos h2 {
@@ -49,7 +49,7 @@
 @media (max-width: 800px) {
     .separacao {
      margin-left: 0;
-     gap: 40px;
+
      grid-template-columns: 1fr 1fr;
  }
  .check-list {
